--- a/Roeivereniging/View/Admin/DeleteBoatPage.xaml
+++ b/Roeivereniging/View/Admin/DeleteBoatPage.xaml
@@ -23,13 +23,35 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="10*"/>
                 <RowDefinition Height="400*"/>
-                <RowDefinition Height="30*"/>
-                <RowDefinition Height="30*"/>
                 <RowDefinition Height="10*"/>
             </Grid.RowDefinitions>
-            <Button x:Name="Delete_Boat_Button" Content="Verwijder" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Click="Delete_Boat_Button_Click"/>
-            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding BoatList}" ColumnWidth="*"/>
-            <Label x:Name="Notification" Content="Boot verwijderd" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" FontSize="14" Visibility="Hidden" Foreground="#FF0DEC17" Grid.Column="1" Margin="0,0,0,0" Grid.RowSpan="2"/>
+            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding BoatList}" ColumnWidth="*" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Naam" Binding="{Binding name, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Type" Binding="{Binding category, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="capaciteit" Binding="{Binding capacity, Mode=OneWay}"/>
+                    <DataGridCheckBoxColumn Header="Stuur" Binding="{Binding steer, Mode=OneWay}"/>
+                    <DataGridCheckBoxColumn Header="Scullen" Binding="{Binding sculling, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Loods" Binding="{Binding shed, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Rij" Binding="{Binding row, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Column" Binding="{Binding Column, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Hoogte" Binding="{Binding Height, Mode=OneWay}"/>
+                    <DataGridTemplateColumn CanUserSort="False" Header="Aanpassen" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Aanpassen" Click="Edit_Boat_Button_Click"></Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn CanUserSort="False" Header="Verwijderen" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Verwijder" Click="Delete_Boat_Button_Click"></Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
 
     </Grid>
