--- a/Roeivereniging/View/Admin/EditBoatWindow.xaml
+++ b/Roeivereniging/View/Admin/EditBoatWindow.xaml
@@ -1,12 +1,60 @@
-﻿<Window x:Class="View.Admin.EditBoatWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View.Admin"
+        xmlns:View="clr-namespace:View" x:Class="View.Admin.EditBoatWindow"
         mc:Ignorable="d"
-        Title="EditBoatWindow" Height="450" Width="800">
+        Title="EditBoatWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+
+        <Grid Margin="0,0,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Rectangle Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Grid.RowSpan="10" Grid.ColumnSpan="2">
+                <Rectangle.Effect>
+                    <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+                </Rectangle.Effect>
+            </Rectangle>
+            <Label x:Name="label5" Content="Boot aanpassen" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2" Margin="0,0,0,0"/>
+            <Button x:Name="Edit_Boat_Button" Content="Bijwerken" Grid.Column="0" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Edit_Boat_Button_Click"/>
+            <ComboBox x:Name="cbSculling" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="400" FontSize="18" Grid.ColumnSpan="2" Height="30" SelectedIndex="0">
+                <ComboBoxItem Content="Scullen"/>
+                <ComboBoxItem Content="Boord roeien"/>
+            </ComboBox>
+            <ComboBox x:Name="cbSteering" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2" SelectedIndex="1">
+                <ComboBoxItem Content="Stuur"/>
+                <ComboBoxItem Content="Geen stuur"/>
+            </ComboBox>
+            <ComboBox x:Name="cbType" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2" SelectedIndex="0">
+                <ComboBoxItem Content="A-Boot"/>
+                <ComboBoxItem Content="B-Boot"/>
+                <ComboBoxItem Content="C-Boot"/>
+                <ComboBoxItem Content="Wherry"/>
+            </ComboBox>
+            <View:TextboxWithPlaceholder x:Name="tbName" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="400" Height="45" FontSize="18" Cursor="" PlaceholderText=""/>
+            <View:TextboxWithPlaceholder x:Name="tbCapacity" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="45" Width="400" FontSize="18" PreviewTextInput="PreviewTextInput"/>
+            <Label x:Name="label" Content="Opslag locatie:" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="6" VerticalAlignment="Bottom" Grid.ColumnSpan="2" FontSize="18"/>
+            <View:TextboxWithPlaceholder x:Name="tbShed" HorizontalAlignment="Right" Margin="0,0,140,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18" Width="70" PreviewTextInput="PreviewTextInput"/>
+            <View:TextboxWithPlaceholder x:Name="tbRow" HorizontalAlignment="Right" Margin="0,0,30,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18" Width="70" PreviewTextInput="PreviewTextInput"/>
+            <View:TextboxWithPlaceholder x:Name="tbColumn" Grid.Column="1" HorizontalAlignment="Left" Margin="30,0,0,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18" Width="70" PreviewTextInput="PreviewTextInput"/>
+            <View:TextboxWithPlaceholder x:Name="tbHeight" Grid.Column="1" HorizontalAlignment="Left" Margin="140,0,0,0" Grid.Row="7" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" FontSize="18" Width="70" PreviewTextInput="PreviewTextInput"/>
+        </Grid>
+
     </Grid>
 </Window>
