--- a/Roeivereniging/View/Admin/AddBoatPage.xaml
+++ b/Roeivereniging/View/Admin/AddBoatPage.xaml
@@ -26,11 +26,8 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Rectangle Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Grid.RowSpan="10" Grid.ColumnSpan="2">
-                <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
-                </Rectangle.Effect>
-            </Rectangle>
+            <Rectangle Margin="15,15,15,15" Grid.Column="0" Grid.Row="0" Grid.RowSpan="10" Grid.ColumnSpan="2"/>
+
             <Label x:Name="label5" Content="Boot Toevoegen" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2" Margin="0,0,0,0"/>
             <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Add_Boat_Button_Click"/>
             <ComboBox x:Name="cbSculling" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="400" FontSize="18" Grid.ColumnSpan="2" Height="30" SelectedIndex="0">
