--- a/Roeivereniging/View/App.xaml
+++ b/Roeivereniging/View/App.xaml
@@ -9,7 +9,13 @@
             <Setter Property="Background" Value="#FF6BB0E8"/>
             <Setter Property="BorderThickness" Value="0,0,0,0"/>
             <Setter Property="Foreground" Value="White"/>
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
         </Style>
+        
         <Style TargetType="Rectangle">
             <Setter Property="Stroke" Value="#FFF3F3F3"></Setter>
             <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
@@ -17,6 +23,37 @@
             <Setter Property="RadiusX" Value="12"></Setter>
             <Setter Property="RadiusY" Value="12"></Setter>
             <Setter Property="Fill" Value="White"></Setter>
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+                </Setter.Value>
+            </Setter>
         </Style>
+       
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="24"></Setter>
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5" />
+                </Style>
+            </Style.Resources>
+        </Style>
+
+        <Style TargetType="CheckBox">
+            <Setter Property="RenderTransformOrigin" Value="0.5,0.5"></Setter>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="2" ScaleY="2"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Setter.Value>
+
+
+            </Setter>
+        </Style>
+        
     </Application.Resources>
 </Application>
