--- a/Roeivereniging/View/DefectsPage.xaml
+++ b/Roeivereniging/View/DefectsPage.xaml
@@ -13,17 +13,11 @@
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <Rectangle Grid.Column="0" Grid.Row="0"  Stroke="#FFF3F3F3" RadiusX="12" RadiusY="12" Fill="White" Margin="5,5,5,5">
-            <Rectangle.Effect>
-                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
-            </Rectangle.Effect>
-        </Rectangle>
-        <Rectangle Grid.Column="1" Grid.Row="0"  Stroke="#FFF3F3F3" RadiusX="12" RadiusY="12" Fill="White" Margin="5,5,5,5">
-            <Rectangle.Effect>
-                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
-            </Rectangle.Effect>
-        </Rectangle>
-        <ListView x:Name="LvDefects" Grid.Column="0" Grid.Row="0" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="20,20,20,20">
+
+        <Rectangle Margin="15,15,15,15" Grid.Column="0" Grid.Row="0" />
+        <Rectangle Margin="15,15,15,15" Grid.Column="1" Grid.Row="0" />
+
+        <ListView x:Name="LvDefects" Grid.Column="0" Grid.Row="0" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="30,30,30,30">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Type" Width="50" DisplayMemberBinding="{Binding title}" />
@@ -32,7 +26,7 @@
             </ListView.View>
         </ListView>
 
-        <Grid DataContext="{Binding SelectedItem, ElementName=LvDefects}" Grid.Column="1">
+        <Grid DataContext="{Binding SelectedItem, ElementName=LvDefects}" Grid.Column="1" Margin="20,20,20,20">
             <Label Content="{Binding boat.name}" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top"/>
             <Label Content="{Binding boat.type}" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top"/>
             <Label Content="Probleem beschrijving" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top"/>
