--- a/Roeivereniging/View/EditUser.xaml
+++ b/Roeivereniging/View/EditUser.xaml
@@ -18,13 +18,10 @@
             <RowDefinition Height="2*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <Rectangle Grid.Column="0" Grid.Row="0" Margin="15,30,0,0" Grid.ColumnSpan="2" Grid.RowSpan="2">
-            <Rectangle.Effect>
-                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
-            </Rectangle.Effect>
-        </Rectangle>
+        <Rectangle Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
 
-        <Grid Grid.Row="0" Grid.Column="0" Margin="15,15,19,0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+
+        <Grid Grid.Row="0" Grid.Column="0" Margin="20,20,20,20" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*" />
                 <ColumnDefinition Width="auto" />
