--- a/Roeivereniging/View/MainWindow.xaml
+++ b/Roeivereniging/View/MainWindow.xaml
@@ -14,6 +14,6 @@
         <StackPanel Grid.Row="0" x:Name="Header" Orientation="Horizontal" Height="50" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
         <Button Grid.Row="0" x:Name="BtnAccount" Content="Account" MinWidth="100" Margin="10,0,120,0" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnAccount_Click"></Button>
         <Button Grid.Row="0" x:Name="BtnLogout" Content="Uitloggen" MinWidth="100" Margin="10,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Stretch" Click="BtnLogout_Click"></Button>
-        <Frame Grid.Row="1" Name="Frame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>
+        <Frame Grid.Row="1" Margin="15,15,15,15" Name="Frame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
