--- a/Roeivereniging/View/Admin/ManageMembersPage.xaml
+++ b/Roeivereniging/View/Admin/ManageMembersPage.xaml
@@ -28,8 +28,26 @@
             </Grid.RowDefinitions>
             <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding MemberList}" ColumnWidth="*" HorizontalAlignment="Stretch" Margin="10,10,10,10" AutoGenerateColumns="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Naam"/>
-                    <DataGridTextColumn Header="Geboortenaam"/>
+                    <DataGridTextColumn Header="Naam" Binding="{Binding name, Mode=OneWay}"/>
+                    <DataGridTextColumn Binding="{Binding email, Mode=OneWay}" Header="Mail"/>
+                    <DataGridTextColumn Header="Geboortenaam" Binding="{Binding date, Mode=OneWay, StringFormat=\{0:d\}}"/>
+                    <DataGridCheckBoxColumn Header="Beheerder" Binding="{Binding admin, Mode=OneWay}"/>
+                    <DataGridCheckBoxColumn Header="Examinator" Binding="{Binding examinator, Mode=OneWay}"/>
+                    <DataGridCheckBoxColumn Header="Reperatuer" Binding="{Binding repair, Mode=OneWay}"/>
+                    <DataGridTemplateColumn Header="Bewerken">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Bewerken" Click=""></Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Verwijderen">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Verwijderen" Click=""></Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
             <Button x:Name="Add_Boat_Button" Content="Lid Toevoegen" HorizontalAlignment="Stretch" Margin="0,0,0,20" Grid.Column="1" Grid.Row="2" FontSize="18" Width="132" Grid.RowSpan="2" Height="30" VerticalAlignment="Stretch"/>
