--- a/Roeivereniging/View/Admin/AddMemberWindow.xaml
+++ b/Roeivereniging/View/Admin/AddMemberWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View.Admin"
         mc:Ignorable="d"
-        Title="AddMemberWindow" Height="450" Width="800">
+        Title="AddMemberWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid Margin="0,0,0,-16">
             <Grid.ColumnDefinitions>
