--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d"
-      Title="ViewReservationsPage" Loaded="Page_Loaded"> 
+      Title="ViewReservationsPage" Loaded="Page_Loaded">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -17,7 +17,7 @@
         <Rectangle Margin="15,15,15,15" Grid.Column="0"/>
 
 
-            <Grid Grid.Column="1" Margin="15,30,15,30" DataContext="{Binding SelectedItem, ElementName=LvRervations}">
+        <Grid Grid.Column="1" Margin="15,30,15,30" DataContext="{Binding SelectedItem, ElementName=LvRervations}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="7*" />
                 <RowDefinition Height="1*" />
@@ -49,11 +49,12 @@
                     <TextBlock FontSize="24" Text="{Binding boat.Height}" FontWeight="Bold"/>
                 </StackPanel>
 
-
                 <!--<Label Content="{Binding StartTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="170,50,0,0" VerticalAlignment="Top" FontSize="26"/>
                 <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="240,50,0,0" VerticalAlignment="Top" FontSize="26"/>
                 <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="235,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
             </Grid>
+            <Frame Margin="15,200,0,0" Grid.ColumnSpan="3" Name="Frame" NavigationUIVisibility="Hidden" HorizontalAlignment="Left" Width="1250" Height="250" VerticalAlignment="Top" />
+            
             <Button x:Name="BtnReportDefect" Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="BtnReportDefect_click">
                 <Button.Style>
                     <Style TargetType="Button">
@@ -76,7 +77,7 @@
 
         </Grid>
 
-        
+
 
         <ListView x:Name="LvRervations" Grid.Column="0" Margin="25,80,25,40" FontSize="16" SelectionChanged="LvRervations_SelectionChanged">
             <ListView.View>
