--- a/Roeivereniging/View/DefectPopup.xaml
+++ b/Roeivereniging/View/DefectPopup.xaml
@@ -8,10 +8,11 @@
         Title="DefectPopup" Height="290" Width="294">
     <Grid>
         <TextBox x:Name="TbTitle" HorizontalAlignment="Left" Margin="43,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="TbDescription" HorizontalAlignment="Left" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" MaxLength="500" AutomationProperties.IsRequiredForForm="True" Height="150"/>
+        <TextBox x:Name="TbDescription" HorizontalAlignment="Left" Margin="10,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" MaxLength="500" AutomationProperties.IsRequiredForForm="True" Height="125"/>
         <Label Content="Titel:" HorizontalAlignment="Left" Margin="8,6,0,0" VerticalAlignment="Top"/>
         <Label Content="Beschrijving van het probleem:" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top"/>
         <Button Content="Melden" HorizontalAlignment="Left" Margin="10,210,0,0" VerticalAlignment="Top" Click="Button_Click" Height="55" Width="272"/>
+        <CheckBox x:Name="CBseaworthy" Content="Is niet langer vaarwaardig" HorizontalAlignment="Left" Margin="10,185,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
