--- a/Roeivereniging/View/BoatMap.xaml
+++ b/Roeivereniging/View/BoatMap.xaml
@@ -5,13 +5,18 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="BoatMap">
 
     <Grid>
 
-        <Image x:Name="Background" Width="auto" Height="auto" HorizontalAlignment="Left" VerticalAlignment="Top" Source="/Resources/Map.png" Margin="0,0,0,0"/>
+        <!--<Image x:Name="Background" Width="auto" Height="auto" HorizontalAlignment="Left" VerticalAlignment="Top" Source="/Resources/Map.png" Margin="0,0,0,0"/>
         <Image x:Name="Selected" Width="auto" Height="auto" HorizontalAlignment="Left" VerticalAlignment="Top" Source="/Resources/boatSingle.png" Margin="0,0,0,0"/>
-        <Label x:Name="testingLabel" Content="" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label x:Name="testingLabel" Content="" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="24"/>-->
+        <Canvas x:Name="mapCanvas">
+            <Image x:Name="Background" Width="1000" Canvas.Left="1" Source="/Resources/map.png"/>
+            <Image x:Name="Selected" Width="35" Canvas.Left="0" Canvas.Right="0" Source="/Resources/boatSingle.png"/>
+        </Canvas>
 
     </Grid>
 </Page>
