--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Title="ViewReservationsPage" Loaded="Page_Loaded">
 
     <Grid>
@@ -53,7 +54,7 @@
                 <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="240,50,0,0" VerticalAlignment="Top" FontSize="26"/>
                 <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="235,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
             </Grid>
-            <Frame Margin="15,200,0,0" Grid.ColumnSpan="3" Name="Frame" NavigationUIVisibility="Hidden" HorizontalAlignment="Left" Width="1250" Height="250" VerticalAlignment="Top" />
+            <Frame Margin="15,200,0,0" Grid.ColumnSpan="2" Name="Frame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             
             <Button x:Name="BtnReportDefect" Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="BtnReportDefect_click">
                 <Button.Style>
