--- a/Roeivereniging/View/Admin/ManageBoatPage.xaml
+++ b/Roeivereniging/View/Admin/ManageBoatPage.xaml
@@ -26,7 +26,7 @@
                 <RowDefinition Height="30*"/>
                 <RowDefinition Height="15*"/>
             </Grid.RowDefinitions>
-            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding BoatList}" ColumnWidth="*" AutoGenerateColumns="False" HorizontalAlignment="Stretch" Margin="10,10,10,10">
+            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding BoatList}" ColumnWidth="*" AutoGenerateColumns="False" HorizontalAlignment="Stretch" Margin="10,10,10,10" FontSize="16">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Naam" Binding="{Binding name, Mode=OneWay}"/>
                     <DataGridTextColumn Header="Type" Binding="{Binding category, Mode=OneWay}"/>
