--- a/Roeivereniging/View/DefectsPage.xaml
+++ b/Roeivereniging/View/DefectsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Title="DefectsPage" Loaded="Page_Loaded">
 
     <Grid>
@@ -17,7 +17,7 @@
         <Rectangle Margin="15,15,15,15" Grid.Column="0" Grid.Row="0" />
         <Rectangle Margin="15,15,15,15" Grid.Column="1" Grid.Row="0" />
 
-        <ListView x:Name="LvDefects" Grid.Column="0" Grid.Row="0" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="30,30,30,30">
+        <ListView x:Name="LvDefects" Grid.Column="0" Grid.Row="0" d:ItemsSource="{d:SampleData ItemCount=5}"  Margin="40" FontSize="16">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Titel" Width="100" DisplayMemberBinding="{Binding title}" />
@@ -28,16 +28,16 @@
         </ListView>
 
         <Grid DataContext="{Binding SelectedItem, ElementName=LvDefects}" Grid.Column="1" Margin="20,20,20,20">
-            <Label Content="{Binding boat.name}" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top"/>
-            <Label Content="{Binding boat.type}" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top"/>
-            <Label Content="Probleem beschrijving" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top"/>
-            <TextBox HorizontalAlignment="Stretch" IsReadOnly="True" TextWrapping="Wrap" Text="{Binding description}" VerticalAlignment="Stretch" Margin="20,120,20,80"/>
+            <Label Content="{Binding boat.name}" HorizontalAlignment="Left" Margin="20,20,0,0" VerticalAlignment="Top" FontSize="48"/>
+            <Label Content="{Binding boat.type}" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top" FontSize="48"/>
+            <Label Content="Probleem beschrijving" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top" FontSize="16"/>
+            <TextBox HorizontalAlignment="Stretch" IsReadOnly="True" TextWrapping="Wrap" Text="{Binding description}" VerticalAlignment="Stretch" Margin="20,120,20,80" FontSize="16"/>
             <Grid x:Name="RepairMenu" Height="50" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="20,0,20,20">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Content="Reparatie Melden" Click="RepairBtn_Click" ></Button>
+                <Button Grid.Column="0" Content="Reparatie Melden" Click="RepairBtn_Click" FontSize="24"></Button>
                 <Grid x:Name="RemoveBtn" Grid.Column="1">
                     
                 </Grid>
