--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -55,7 +55,7 @@
                 <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="235,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
             </Grid>
             <Frame Margin="15,200,0,0" Grid.ColumnSpan="2" Name="Frame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            
+
             <Button x:Name="BtnReportDefect" Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="BtnReportDefect_click">
                 <Button.Style>
                     <Style TargetType="Button">
@@ -80,7 +80,7 @@
 
 
 
-        <ListView x:Name="LvRervations" Grid.Column="0" Margin="25,80,25,40" FontSize="16" SelectionChanged="LvRervations_SelectionChanged">
+        <ListView x:Name="LvRervations" Grid.Column="0" Margin="40,80,40,40" FontSize="16" SelectionChanged="LvRervations_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Datum" Width="auto" DisplayMemberBinding="{Binding Date}"></GridViewColumn>
@@ -90,6 +90,12 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <CheckBox Content="Toon alle reserveringen" HorizontalAlignment="Left" Margin="95 ,40,0,0" VerticalAlignment="Top" Unchecked="CbxShowAllUnchecked" Checked="CbxShowAllChecked"/>
+        <CheckBox Content="Toon alle reserveringen" HorizontalAlignment="Left" Margin="75,50,0,0" VerticalAlignment="Top" Unchecked="CbxShowAllUnchecked" Checked="CbxShowAllChecked" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
     </Grid>
 </Page>
